--- a/EncarAlquiler/Gemfile
+++ b/EncarAlquiler/Gemfile
@@ -45,3 +45,4 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
 gem 'bootstrap-sass', '~> 3.3.5'
 gem 'sprockets-rails', '~> 2.3.2'
+gem 'devise'
