--- a/EncarAlquiler/Gemfile
+++ b/EncarAlquiler/Gemfile
@@ -7,6 +7,19 @@ gem 'rails', '4.2.3'
 gem 'sqlite3'
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
+gem 'bootstrap-sass', '~> 3.3.5'
+gem 'autoprefixer-rails'
+
+#AGREGADO
+gem 'execjs'
+gem 'foreigner'
+gem "twitter-bootstrap-rails"
+gem 'bootstrap_form'
+gem 'mysql2', '~> 0.3.20'
+
+#gem 'sprockets-rails', '~> 2.3.2'
+gem 'devise'
+
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
 # Use CoffeeScript for .coffee assets and views
@@ -43,7 +56,6 @@ end
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
-gem 'bootstrap-sass', '~> 3.3.5'
-gem 'sprockets-rails', '~> 2.3.2'
-gem 'devise'
-gem 'mysql2', '~> 0.3.18'
+
+
+# productos, servicios, reservas, funcionarios, vehiculos, clientes
