--- a/EncarAlquiler/test/fixtures/habitaciones.yml
+++ b/EncarAlquiler/test/fixtures/habitaciones.yml
@@ -1,11 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  numero: 
-  tipo_id: 
+  tipo_id: 1
+  numero: 1
   descripcion: MyString
+  estado: MyString
+  precio: 1
 
 two:
-  numero: 
-  tipo_id: 
+  tipo_id: 1
+  numero: 1
   descripcion: MyString
+  estado: MyString
+  precio: 1
