navbar menu, cambios en reservas y tipos

--- a/EncarAlquiler/test/fixtures/reservas.yml
+++ b/EncarAlquiler/test/fixtures/reservas.yml
@@ -3,9 +3,11 @@
 one:
   locatario_id: 1
   fecha_reserva: MyString
+  estado: MyString
   monto: 1
 
 two:
   locatario_id: 1
   fecha_reserva: MyString
+  estado: MyString
   monto: 1
